Added functionality to delete talk attendee
