# controllers/talkAttendeeController.js
@@ -32,12 +32,12 @@ exports.getTalkAttendee = async (req, res) => {
     const talkAttendee = await TalkAttendee.findByPk(req.params.id);
 
     if (!talkAttendee) {
-      return res.status(404).json({ message: 'TalkAttendee not found' });
+      return res.status(404).json({ message: 'Talk attendee not found' });
     }
 
     res.status(200).json(talkAttendee);
   } catch (err) {
-    res.status(400).json({ message: 'Could not get TalkAttendee', error: err });
+    res.status(400).json({ message: 'Could not get Talk attendee', error: err });
   }
 };
 
@@ -62,5 +62,24 @@ exports.getAttendeesForTalk = async (req, res) => {
   } catch (err) {
     console.log(err);
     res.status(400).json({ message: 'Could not get attendees', error: err });
+  }
+};
+
+
+exports.deleteTalkAttendee = async (req, res) => {
+  const { id } = req.params;
+
+  try {
+    const talkAttendee = await TalkAttendee.findByPk(id);
+
+    if (!talkAttendee) {
+      return res.status(404).json({ message: 'Talk attendee not found.' });
+    }
+
+    await talkAttendee.destroy();
+
+    res.status(200).json({ message: 'Talk attendee deleted.' });
+  } catch (error) {
+    res.status(500).json({ message: 'An error occurred.', error: error });
   }
 };
