# swagger_output.json
@@ -11,210 +11,6 @@
     "http"
   ],
   "paths": {
-    "/create": {
-      "post": {
-        "tags": [
-          "Talk"
-        ],
-        "description": "Endpoint to create a new talk.",
-        "parameters": [
-          {
-            "name": "newTalk",
-            "in": "body",
-            "description": "Information for the new talk.",
-            "required": true,
-            "schema": {
-              "$ref": "#/definitions/Talk"
-            }
-          }
-        ],
-        "responses": {
-          "201": {
-            "description": "Created"
-          },
-          "401": {
-            "description": "Unauthorized"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
-      }
-    },
-    "/{id}": {
-      "delete": {
-        "tags": [
-          "Talk"
-        ],
-        "description": "Endpoint to delete a talk.",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "integer",
-            "description": "Talk ID."
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "401": {
-            "description": "Unauthorized"
-          },
-          "404": {
-            "description": "Not Found"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
-      },
-      "get": {
-        "tags": [
-          "Talk"
-        ],
-        "description": "Endpoint to get a specific talk.",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "integer",
-            "description": "Talk ID."
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "401": {
-            "description": "Unauthorized"
-          },
-          "404": {
-            "description": "Not Found"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
-      },
-      "put": {
-        "tags": [
-          "Talk"
-        ],
-        "description": "Endpoint to update a specific talk.",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "integer",
-            "description": "Talk ID."
-          },
-          {
-            "name": "updatedTalk",
-            "in": "body",
-            "description": "Information for the updated talk.",
-            "required": true,
-            "schema": {
-              "$ref": "#/definitions/Talk"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "401": {
-            "description": "Unauthorized"
-          },
-          "404": {
-            "description": "Not Found"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
-      }
-    },
-    "/": {
-      "get": {
-        "tags": [
-          "Talk"
-        ],
-        "description": "Endpoint to get all talks.",
-        "parameters": [],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "401": {
-            "description": "Unauthorized"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
-      }
-    },
-    "/talk/{talk_id}": {
-      "get": {
-        "tags": [
-          "TalkAttendee"
-        ],
-        "description": "Endpoint to get attendees for a specific talk.",
-        "parameters": [
-          {
-            "name": "talk_id",
-            "in": "path",
-            "required": true,
-            "type": "integer",
-            "description": "Talk ID."
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "400": {
-            "description": "Bad Request"
-          },
-          "401": {
-            "description": "Unauthorized"
-          },
-          "404": {
-            "description": "Not Found"
-          }
-        }
-      }
-    },
-    "/room/{id}": {
-      "get": {
-        "tags": [
-          "Room"
-        ],
-        "description": "Endpoint to get a specific room.",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "integer",
-            "description": "Room ID."
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "401": {
-            "description": "Unauthorized"
-          }
-        }
-      }
-    },
     "/register": {
       "post": {
         "tags": [
@@ -321,6 +117,143 @@
           },
           "500": {
             "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/create": {
+      "post": {
+        "tags": [
+          "TalkAttendee"
+        ],
+        "description": "Endpoint to create a new talk attendee.",
+        "parameters": [
+          {
+            "name": "newTalkAttendee",
+            "in": "body",
+            "description": "Information for the new talk attendee.",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/TalkAttendee"
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Created"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          }
+        }
+      }
+    },
+    "/": {
+      "get": {
+        "tags": [
+          "Speaker"
+        ],
+        "description": "Endpoint to get all speakers.",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/{id}": {
+      "get": {
+        "tags": [
+          "TalkAttendee"
+        ],
+        "description": "Endpoint to get a specific talk attendee.",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "integer",
+            "description": "Talk Attendee ID."
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "404": {
+            "description": "Not Found"
+          }
+        }
+      }
+    },
+    "/room/{id}": {
+      "get": {
+        "tags": [
+          "Room"
+        ],
+        "description": "Endpoint to get a specific room.",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "integer",
+            "description": "Room ID."
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          }
+        }
+      }
+    },
+    "/talk/{talk_id}": {
+      "get": {
+        "tags": [
+          "TalkAttendee"
+        ],
+        "description": "Endpoint to get attendees for a specific talk.",
+        "parameters": [
+          {
+            "name": "talk_id",
+            "in": "path",
+            "required": true,
+            "type": "integer",
+            "description": "Talk ID."
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "404": {
+            "description": "Not Found"
           }
         }
       }
